# ai-ml-telecom-customer-churn

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  Makefile  README.md  docker-compose.yaml  dvc.yaml  launch_system.bat  main.py  pre_commit_output.txt  pre_commit_output_v2.txt  pyproject.toml  pyright_error.txt  pyright_report.json  pyright_report_v2.json  validate_system.bat  validate_system.sh
.agents/rules/: git.md  implementation_plan.md  planning.md
.dvc/tmp/: dag.md  lock  rwlock
.github/workflows/: cd.yml  ci.yml
config/: config.yaml  params.yaml  schema.yaml
docker/: entrypoint.sh
docker/embedding_service/: Dockerfile
docker/gradio_ui/: Dockerfile
docker/mlflow_server/: Dockerfile
docker/prediction_api/: Dockerfile
notebooks/: 01_eda_telco_churn.ipynb  run_eda_analysis.py
references/: executive_summary.md  project_charter.md  project_skeleton.md
reports/docs/: model_card.md  ticket_notes_enrichment.md
reports/docs/architecture/: architecture.md  cicd_cloud_deployment.md  data_enrichment.md  data_ingestion.md  data_validation_gx.md  dvc_pipeline.md  feature_engineering.md  gradio_ui.md  inference.md  model_training.md
reports/docs/decisions/: api_reconstruction.md  architectural_reassessment.md  aws_deployment.md  cloud_bill_hurdle.md  containerization.md  data_quality_checker.md  gradio.md  sentiment_tag_correlation.md  sentiment_tags_correlation.md
reports/docs/evaluations/: api_warmup.md  codebase_review.md  data_enrichment_revised.md  traning_results_diagnosis.md  validation_report.md
reports/docs/references/: eda_report.md  prd.md  project_charter.md  project_skeleton.md  ticket_notes_enrichment.md  user_stories.md
reports/docs/runbooks/: aws_actionable_plan.md  rules_and_guardrails.md  test_suite.md
reports/docs/workflows/: executive_summary.md  phase_05.md  phase_06.md  phase_07a.md  phase_07b.md  phase_08_full_implementation.md  phase_08_local_simulation.md
reports/figures/eda/: vif_results.csv
src/api/embedding_service/: main.py  router.py  schemas.py
src/api/prediction_service/: inference.py  main.py  router.py  schemas.py
src/components/: data_ingestion.py  data_validation.py  feature_engineering.py
src/components/data_enrichment/: generator.py  orchestrator.py  prompts.py  schemas.py
src/components/model_training/: evaluator.py  trainer.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/pipeline/: stage_00_data_ingestion.py  stage_01_data_validation.py  stage_02_data_enrichment.py  stage_03_enriched_validation.py  stage_04_feature_engineering.py  stage_05_model_training.py
src/ui/: app.py
src/ui/components/: shap_chart.py
src/ui/data_loaders/: api_client.py
src/ui/pages/: batch_predict.py  run_comparison.py  single_predict.py
src/utils/: array_utils.py  common.py  exceptions.py  feature_utils.py  logger.py  mlflow_config.py
task-definitions/: embedding-service.json  gradio-ui.json  mlflow-server.json  prediction-api.json
tests/: conftest.py  test_enrichment.py  test_feature_engineering.py  test_gradio_smoke.py  test_pydantic_entities.py
tests/unit/: conftest.py  test_api.py  test_api_embedding.py  test_api_prediction.py  test_api_schemas.py  test_array_utils.py  test_components.py  test_config.py  test_data_ingestion.py  test_data_validation.py  test_enrichment.py  test_enrichment_generator.py  test_enrichment_orchestrator.py  test_model.py  test_model_training.py  test_pipelines.py  test_pydantic_entities.py  test_utils.py
